# vaulty

./: CMakeLists.txt  README.md  main.cpp
include/: cli.hpp  crypto.hpp  database.hpp  input_utils.hpp  interface.hpp  logger.hpp  secure_buffer.hpp  secure_buffer_writer.hpp  secure_memory_manager.hpp
src/: cli.cpp  crypto.cpp  database.cpp  input_utils.cpp  interface.cpp  main.cpp
tests/: test_crypto.cpp  test_database.cpp  test_input_utils.cpp  test_secure_buffer.cpp
